--- a/package.json
+++ b/package.json
@@ -6,30 +6,39 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "tsc && node dist/app.js",
-    "seeds-dev":"tsc && node dist/data/insert-seeders"
+    "seeds-dev": "tsc && node dist/data/insert-seeders"
   },
   "author": "Zedmous",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/sequelize": "^4.28.20",
+    "rollup": "^2.79.2",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
-    "typescript": "^5.5.2"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@google/earthengine": "^1.4.5",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
     "node": "^20.14.0",
     "sequelize": "^6.37.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yamljs": "^0.3.0"
   }
 }
